Solved issue with broad titles on mobile.

--- a/assets/css/1-base/main.sass
+++ b/assets/css/1-base/main.sass
@@ -16,20 +16,10 @@ html, body
   font-weight: 400
   margin: .5rem 0
 
-  //display: flex
-  //flex-direction: row
-  //justify-content: center
-  //align-items: baseline
-
-  span
-    //flex: 1
-    //display: flex
-    //&:first-child
-    //  flex: 1
-    //  justify-content: flex-end
-    //&:last-child
-    //  flex: 1
-    //  justify-content: flex-start
+  @media(max-width: 400px)
+    font-size: 2rem
+  @media(max-width: 320px)
+    font-size: 1.5rem
 
   .smaller
     font-size: .55em
